# OTF2-to-CTF-converter

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  attributes.yaml  build.sh  config.yaml  events.yaml  events_attributes.yaml  global_def.yaml  global_def_attributes.yaml  globaldef.yaml  metadata  metrics.yaml  otf2_aliases.yaml
barectf_config/: events.yaml  events_attributes.yaml  global_def_attributes.yaml
cmake/: FindOTF2.cmake
inc/: attribute_callbacks.h  barectf-bitfield.h  barectf-platform-linux-fs.h  barectf.h  datatypes.h  event_callbacks.h  global_def_callbacks.h  main_functions.h  utilities_functions.h  utils.h
include/: attribute_callbacks.h  barectf-bitfield.h  barectf.h  event_callbacks.h  global_def_callbacks.h  utilities_functions.h
scripts/: post_processing.py
src/: attribute_callbacks.c  barectf-platform-linux-fs.c  barectf.c  event_callbacks.c  global_def_callbacks.c  main.c  main_functions.c  otf2_converter.c  utilities_functions.c  utils.c
